k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: inventory
  labels:
    app.kubernetes.io/managed-by: kubectl
    environment: production
